# photobooth

./: .gitignore  CLAUDE.md  README.md  config.yaml  fear 추가  frame design.txt  main.py  phase1_pipeline.py  phase5_prompt.txt  pyproject.toml  run-dev.bat  run.bat
assets/frames/: generate_all_frames.py
src/: __init__.py
src/analysis/: __init__.py  analysis_thread.py  emotion.py
src/camera/: __init__.py  camera_thread.py  camera_utils.py  capture.py
src/compose/: __init__.py  composer.py  compositor.py
src/print/: __init__.py  print_thread.py  printer.py
src/ui/: __init__.py  main_window.py  theme.py
src/ui/screens/: __init__.py  analysis.py  attract.py  capture.py  preview.py  printing.py
src/utils/: __init__.py  config.py  idle_timer.py  kiosk_utils.py  logger.py  sound.py
